# OWL_DSL

./: AGENTS.md  FMA.CNL.yaml  MANIFEST.in  README.md  fma_corpus_en.py  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
ontology_configurations/: OBO.CNL.yaml  Uberon.CNL.yaml
src/owl_dsl/: __init__.py  cli.py  reasoner.py  renderer.py
tests/: conftest.py  test_renderer.py
