[build-system]
requires = ["setuptools>=67.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "OWL_DSL"
version = "0.1.0"
description = "Library for extracting Domain Specific Langauges from OWL (using Owlready2)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "owlready2>=0.50",
    "pyyaml>=6.0.3",
    "rdflib>=7.5.0",
    "spacy"
]
authors = [
  { name = "Chimezie Ogbuji", email = "chimezie@gmail.com" }
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: PyPy",
]

[project.optional-dependencies]
nlp = [
  "spacy"
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
"owl_dsl.corpus" = "owl_dsl.cli:main"
